# auto-sync

./: README.md  pyproject.toml
src/editor/: main.py
