[project]
name = "video-editor"
version = "1.0.0"
description = ""
authors = [
    {name = "mufasa159", email = "mufasa159@proton.me"},
]
dependencies = [
    "librosa>=0.10.1",
    "pygame>=2.5.2",
    "setuptools>=69.0.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

